[package]
name = "candle_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.121"
num_cpus = "1.15.0"
once_cell = "1.19.0"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }

candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }

candle-transformers = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.19.1"
tracing-chrome = "0.7.2"
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokio = "1.39.2"
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
tracing-subscriber = "0.3.18"

[[example]]
name = "hf_hub"
path = "examples/hf_hub.rs"

[[example]]
name = "use_model"
path = "examples/use_model.rs"
